# nv-mini-texture-packer

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt  nv_mini_texture_packer.c  nv_mini_texture_packer.h
share/pkgconfig/: libnv-mini-texture-packer.pc.in
tool/: CMakeLists.txt  main.c
